# pmds

./: .gitignore  master_plan.md  master_plan_2.md
scallop-titans-agent/: README.md  accelerate_config.yaml  accelerate_deepspeed.yaml  convert_fsdp_to_lora.py  debug_inference.py  eval_sft.py  generate_data.sh  generate_data_persistent.sh  merge_lora_adapter.py  monitor_grpo.py  pyproject.toml  rewards.py  train_grpo.py  train_grpo.sh  train_grpo_persistent.sh  train_sft.py  train_sft.sh  train_sft_persistent.sh  training_status.txt
scallop-titans-agent/apps/: demo_gradio.py
scallop-titans-agent/scripts/: analyze_surprise.py  eval_clutrr.py  eval_routing.py  generate_routing_data.py  serve_vllm.sh  sft_smoke_test.py  test_plumbing.py  verify_agent_loop.py
scallop-titans-agent/src/scallop_titans/: __init__.py  agent.py  constants.py
scallop-titans-agent/src/scallop_titans/data/: __init__.py  clutrr_dataset.py  graph_generator.py  grpo_data.py  negative_miner.py  synthetic_generator.py  trace_converter.py
scallop-titans-agent/src/scallop_titans/memory/: __init__.py  titans_adapter.py
scallop-titans-agent/src/scallop_titans/reasoning/: __init__.py  scallop_engine.py  titans_foreign_predicate.py
scallop-titans-agent/src/scallop_titans/serving/: scallop_tool_parser.py
scallop-titans-agent/src/scallop_titans/training/: __init__.py  grpo.py  sft.py  (+1 more)
scallop-titans-agent/tests/: __init__.py  rs1_layer_depth_test.py  rs2_gradient_flow_test.py  test_clutrr_dataset.py  test_memory.py  test_negative_miner.py  test_reasoning.py  test_scallop_bridge.py  test_synthetic_generator.py  test_trace_converter.py
(+21 files in other folders)
